<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#A8A8A8"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_note"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="15dp"/>
    <TextView
        android:id="@+id/dialog_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:background="@drawable/yes_btn"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/dialog_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:padding="10dp"
        android:background="@drawable/no_btn"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>