<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202124"
    tools:context=".ui.Fragments.HomeFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/filterIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_filter"
                android:layout_margin="5dp" />
            <TextView
                android:id="@+id/filterHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:background="@drawable/filter_btn"
                android:layout_margin="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/btwo"
                />
            <TextView
                android:id="@+id/filterMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                android:background="@drawable/filter_btn"
                android:layout_margin="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
               android:fontFamily="@font/btwo"
                />
            <TextView
                android:id="@+id/filterLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:background="@drawable/filter_btn"
                android:layout_marginStart="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/btwo"
                />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvAllNotes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="#E50914"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>



